separando por sets

--- a/port2.html
+++ b/port2.html
@@ -24,13 +24,13 @@
             <h3> Bacteria GO </h3><br>
             
             <div>
-                <a class="example-image-link" href="BacteriaGO.png" data-lightbox="example-set" data-title="Legenda da foto 1">
+                <a class="example-image-link" href="BacteriaGO.png" data-lightbox="set1" data-title="Legenda da foto 1">
                         <span class="bis"><img class="example-image" src="BacteriaGO.png" alt=""/></span>
                 </a>
-                <a class="example-image-link" href="Bacteria3.png" data-lightbox="example-set" data-title="Legenda da foto 2">
+                <a class="example-image-link" href="Bacteria3.png" data-lightbox="set1" data-title="Legenda da foto 2">
                         <span class="bis"><img class="example-image" src="Bacteria3.png" alt=""/></span>
                 </a>
-                <a class="example-image-link" href="Bacteria.png" data-lightbox="example-set" data-title="Legenda da foto 3">
+                <a class="example-image-link" href="Bacteria.png" data-lightbox="set1" data-title="Legenda da foto 3">
                         <span class="bis"><img class="example-image" src="Bacteria.png" alt=""/></span>
                 </a>
             </div>
@@ -40,14 +40,14 @@
             <h2> Jogo </h2>
             <h3> Minha Querida Memória </h3><br>
             <div> <!-- div lightbox-->
-                <a class="example-image-link" href="img/Marinheiro2.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                        <span class="bis"><img class="example-image" src="img/Marinheiro2.png" alt=""/></span>
+                <a class="example-image-link2" href="img/Marinheiro2.png" data-lightbox="set2" data-title="Click the right half of the image to move forward.">
+                        <span class="bis"><img class="example-image2" src="img/Marinheiro2.png" alt=""/></span>
                 </a>
-                <a class="example-image-link" href="img/cenario2.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                        <span class="bis"><img class="example-image" src="img/cenario2.png" alt=""/></span>
+                <a class="example-image-link2" href="img/cenario2.png" data-lightbox="set2" data-title="Click the right half of the image to move forward.">
+                        <span class="bis"><img class="example-image2" src="img/cenario2.png" alt=""/></span>
                 </a>
-                <a class="example-image-link" href="img/cenario.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                        <span class="bis"><img class="example-image" src="img/cenario.png" alt=""/></span>
+                <a class="example-image-link2" href="img/cenario.png" data-lightbox="set2" data-title="Click the right half of the image to move forward.">
+                        <span class="bis"><img class="example-image2" src="img/cenario.png" alt=""/></span>
                 </a>
             </div> <!-- div lightbox-->
             
