--- a/port2.html
+++ b/port2.html
@@ -24,8 +24,8 @@
             <h3> Bacteria GO </h3><br>
             
             <div>
-                <a class="example-image-link" href="BacteriaGO.png" data-lightbox="set1" data-title="Legenda da foto 1">
-                        <span class="bis"><img class="example-image" src="BacteriaGO.png" alt=""/></span>
+                <a class="example-image-link" href="BacteriaGO.png" data-lightbox="set1" data-title="Legenda da foto 1"> <!-- imagem grande -->
+                        <span class="bis"><img class="example-image" src="BacteriaGO.png" alt=""/></span> <!-- imagem pequena-->
                 </a>
                 <a class="example-image-link" href="Bacteria3.png" data-lightbox="set1" data-title="Legenda da foto 2">
                         <span class="bis"><img class="example-image" src="Bacteria3.png" alt=""/></span>
