Alteraçòes de cor e legenda

--- a/port2.html
+++ b/port2.html
@@ -24,13 +24,13 @@
             <h3> Bacteria GO </h3><br>
             
             <div>
-                <a class="example-image-link" href="BacteriaGO.png" data-lightbox="set1" data-title="Legenda da foto 1"> <!-- imagem grande -->
+                <a class="example-image-link" href="BacteriaGO.png" data-lightbox="set1" data-title="Logo do jogo Bactéria GO"> <!-- imagem grande -->
                         <span class="bis"><img class="example-image" src="BacteriaGO.png" alt=""/></span> <!-- imagem pequena-->
                 </a>
-                <a class="example-image-link" href="Bacteria3.png" data-lightbox="set1" data-title="Legenda da foto 2">
+                <a class="example-image-link" href="Bacteria3.png" data-lightbox="set1" data-title="Bactéria modelo 1">
                         <span class="bis"><img class="example-image" src="Bacteria3.png" alt=""/></span>
                 </a>
-                <a class="example-image-link" href="Bacteria.png" data-lightbox="set1" data-title="Legenda da foto 3">
+                <a class="example-image-link" href="Bacteria.png" data-lightbox="set1" data-title="Bactéria modelo 2">
                         <span class="bis"><img class="example-image" src="Bacteria.png" alt=""/></span>
                 </a>
             </div>
@@ -40,13 +40,13 @@
             <h2> Jogo </h2>
             <h3> Minha Querida Memória </h3><br>
             <div> <!-- div lightbox-->
-                <a class="example-image-link2" href="img/Marinheiro2.png" data-lightbox="set2" data-title="Click the right half of the image to move forward.">
+                <a class="example-image-link2" href="img/Marinheiro2.png" data-lightbox="set2" data-title="Marinheiro">
                         <span class="bis"><img class="example-image2" src="img/Marinheiro2.png" alt=""/></span>
                 </a>
-                <a class="example-image-link2" href="img/cenario2.png" data-lightbox="set2" data-title="Click the right half of the image to move forward.">
+                <a class="example-image-link2" href="img/cenario2.png" data-lightbox="set2" data-title="Marinheiro em cenário">
                         <span class="bis"><img class="example-image2" src="img/cenario2.png" alt=""/></span>
                 </a>
-                <a class="example-image-link2" href="img/cenario.png" data-lightbox="set2" data-title="Click the right half of the image to move forward.">
+                <a class="example-image-link2" href="img/cenario.png" data-lightbox="set2" data-title="Marinheiro em cenário + HUD">
                         <span class="bis"><img class="example-image2" src="img/cenario.png" alt=""/></span>
                 </a>
             </div> <!-- div lightbox-->
