alteração no tamanho da fonte no footer

--- a/port2.html
+++ b/port2.html
@@ -80,7 +80,7 @@
             <h2> Email: </h2>
             <h3> ljv.neto@gmail.com </h3><br>
             <h2>Facebook:</h2>
-            <h3><a href="https://www.facebook.com/navegames1/">NAVEgames</a></h3></footer>
+            <h3><a class="link" href="https://www.facebook.com/navegames1/">NAVEgames</a></h3>
             
         </footer>
         
